--- a/faryal 2/style.css
+++ b/faryal 2/style.css
@@ -37,7 +37,7 @@ body {
   
   /* Hero Section */
   .hero {
-    background-image: url('https://www.kfcpakistan.com/images/hero-banner.jpg');
+    background-image: url('https://previews.123rf.com/images/sir270/sir2702212/sir270221200005/212637613-minsk-belarus-december-03-2021-black-background-night-lots-of-hot-wings-or-strips-of-kfc-chicken-in-.jpg');
     background-size: cover;
     background-position: center;
     padding: 100px 20px;
